<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_text_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.48"
        android:background="@drawable/input_text_filter_h"
        android:hint="@string/input_text_hint"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextAppearance="@style/input_text_filter_layout_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.77">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/input_text_filter"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_filter_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.48"
        android:background="@drawable/input_text_filter_h"
        android:hint="@string/input_filter_hint"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextAppearance="@style/input_text_filter_layout_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.77">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_filter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/input_text_filter" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/anagram_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:text="@string/anagram_text_def"
        android:textAppearance="@style/anagram_text_def"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

</androidx.constraintlayout.widget.ConstraintLayout>
